--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,11 +9,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
     - uses: actions/checkout@v4
     - name: Build all Docker images
+      working-directory: ${{ github.workspace }}/build
       run: |
-        for f in ./build/*.Dockerfile; do
+        for f in *.Dockerfile; do
           echo "Building $f"
           docker build --tag "openspace-${f%.Dockerfile}" --file "$f" .
         done
