--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "**" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "**" ]
 
 jobs:
   build:
@@ -12,7 +12,7 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
-    - name: Build all Docker images
+    - name: Build all build/ Docker images
       working-directory: ${{ github.workspace }}/build
       run: |
         for f in *.Dockerfile; do
