--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,4 +29,4 @@ jobs:
       working-directory: ${{ github.workspace }}/build
       run: |
         echo "Building ${{ matrix.dockerfile }}"
-        docker build --tag "openspace-${{ matrix.dockerfile%.Dockerfile }}" --file "${{ matrix.dockerfile }}" .
+        docker build --tag "openspace-${{ matrix.dockerfile.Dockerfile }}" --file "${{ matrix.dockerfile }}" .
