--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
       id: set-matrix
       run: |
         DOCKERFILES=$(ls ${{ github.workspace }}/build/*.Dockerfile | jq -R -s -c 'split("\n")[:-1]')
-        echo "::set-output name=matrix::{\"dockerfile\": [\"$DOCKERFILES\"]}"
+        echo "::set-output name=matrix::{\"dockerfile\":${DOCKERFILES}}"
 
   build:
     needs: setup
